--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
 
-<p><strong>This is welcome page where you can navigate to another chapters:</strong></p>
-<!--<p th:text="#{welcome.intro}"></p>-->
+<p><strong><span th:text="#{welcome.intro}">This is welcome page where you can navigate to another chapters. But, firstly, you should be <a th:href="@{/login}">logged into the System</a>. Choose any chapter to authorize.</span></strong></p>
 <menu>
     <ul>
         <li><a th:href="@{/genres}" href="/genres.html">Genres</a></li>
